deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-challenge
spec:
  selector:
    matchLabels:
      app: kubernetes-challenge
  template:
    metadata:
      labels:
        app: kubernetes-challenge
    spec:
      containers:
        - name: kubernetes-challenge
          image: aditya008/k8s_challange:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 4000
