service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-challenge-service
spec:
  selector:
    app: kubernetes-challenge
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
  type: ClusterIP
